[tool.poetry]
name = "read-ai"
version = "0.1.0"
description = ""
authors = ["Drezil <nicole@dresselhaus.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "==1.26.4"
pillow = "==10.3.0"
requests = "*"
setuptools = ">68.0.0"
torch = ">=2.3.0,<2.4.0"
torchvision = "==0.18.0"
transformers = "==4.40.2"
flash-attn = {url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.8/flash_attn-2.5.8+cu122torch2.3cxx11abiTRUE-cp311-cp311-linux_x86_64.whl", extras = ["--no-build-isolation"]}
accelerate = "^0.32.1"
ollama = "^0.3.1"


[tool.poetry.group.dev.dependencies]
wheel = "^0.43.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
